--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -168,7 +168,7 @@
                 }}
               </div>
             {%- else -%}
-              <span class="h2">{{ shop.name }}</span>
+              <span class="h2">{{ shop.name }}FAHAD'S SHOP</span>
             {%- endif -%}
           </a>
       {%- if request.page_type == 'index' -%}
